# cpp_craft_1013

solutions/Aliaksandr_Talochka/7/minute_calculator/: CMakeLists.txt  _msvc_gen_2010_32.bat
solutions/Aliaksandr_Talochka/7/minute_market_data/: _msvc_gen_2010_32.bat
solutions/Aliaksandr_Talochka/7/sources/market_data_receiver/: main.cpp
solutions/Aliaksandr_Talochka/7/sources/multicast_communication/: ini_config.cpp  ini_config.h  market_data_receiver.cpp  market_data_receiver.h  messages.h  parser_quote.cpp  parser_quote.h  parser_trade.cpp  parser_trade.h  udp_listener.cpp  udp_listener.h
solutions/al_strokov/homeworks/6/: CMakeLists.txt  _eclipse_gen.sh
solutions/al_strokov/homeworks/6/tests/: CMakeLists.txt
solutions/al_strokov/homeworks/6/tests/multicast_communication_tests/: CMakeLists.txt  multicast_communication.cpp  test_registrator.cpp  test_registrator.h
solutions/alexandr_lapenkov/7/: config.ini
solutions/alexandr_lapenkov/7/sources/minute_calculator/: minute_calculator.cpp  minute_calculator.h
solutions/alexandr_lapenkov/7/sources/minute_market_data/: main.cpp
solutions/alexandr_lapenkov/7/sources/multicast_communication/: communication.h  processor.cpp  processor.h  quote_message.cpp  quote_message.h  trade_message.cpp  trade_message.h  udp_listener.cpp  udp_listener.h
solutions/alexandr_lapenkov/7/tests/minute_calculator_tests/: datafeed_calculator_tests.cpp  test_registrator.cpp  test_registrator.h
solutions/alexandr_lapenkov/7/tests/multicast_communication_tests/: communication_and_listener_tests.cpp  processor_tests.cpp  quote_message_tests.cpp  test_registrator.cpp  test_registrator.h  trade_message_tests.cpp
solutions/alexandr_lapenkov/trade_processor_project/: _msvc_gen_2010_32.bat  config.ini
solutions/alexandr_lapenkov/trade_processor_project/sources/market_data_receiver/: main.cpp
solutions/alexandr_lapenkov/trade_processor_project/sources/multicast_communication/: binreader.cpp  binreader.h  communication.cpp  communication.h  processor.cpp  processor.h  quote_message.cpp  quote_message.h  thread_safe_queue.h  trade_message.cpp  trade_message.h  udp_listener.cpp
solutions/alexandr_lapenkov/trade_processor_project/tests/data/: quote_messages  trade_messages
solutions/alexandr_lapenkov/trade_processor_project/tests/multicast_communication_tests/: communication_and_listener_tests.cpp  processor_tests.cpp  quote_message_tests.cpp  trade_message_tests.cpp
solutions/ivan_sidarau/trade_processor_project/: CMakeLists.txt  _gcc_gen.sh  _msvc_gen_2005_64.bat
solutions/ivan_sidarau/trade_processor_project/_cmake_scripts/: utils.cmake
solutions/ivan_sidarau/trade_processor_project/sources/common/: address.cpp  address.h  buffer.cpp  buffer.h  config_reader.cpp  config_reader.h  time_helper.cpp  time_helper.h
solutions/ivan_sidarau/trade_processor_project/sources/market_data_receiver/: CMakeLists.txt  main.cpp
solutions/ivan_sidarau/trade_processor_project/sources/minute_calculator/: CMakeLists.txt  mediator.cpp  mediator.h  stock_minute_data.cpp  stock_minute_data.h  stock_minute_storage.cpp  stock_minute_storage.h  ts_minute_storage.cpp  ts_minute_storage.h
solutions/ivan_sidarau/trade_processor_project/sources/minute_market_data/: CMakeLists.txt  main.cpp
solutions/ivan_sidarau/trade_processor_project/sources/multicast_communication/: CMakeLists.txt  cqs_parser.cpp  cqs_parser.h  cqs_protocol.h  cts_parser.cpp  cts_parser.h  cts_protocol.h  market_data_processor.h  market_data_receiver.cpp  market_data_receiver.h  market_datafeed_writer.cpp  market_datafeed_writer.h  mediator.cpp  mediator.h  quote_message.cpp  quote_message.h  trade_message.cpp  trade_message.h
solutions/ivan_sidarau/trade_processor_project/tests/common_tests/: CMakeLists.txt  address_tests.cpp  (+5 more)
solutions/ivan_sidarau/trade_processor_project/tests/minute_calculator_tests/: CMakeLists.txt  mediator_tests.cpp  stock_minute_data_tests.cpp  stock_minute_storage_tests.cpp  test_registrator.cpp  test_registrator.h  ts_minute_storage_tests.cpp
solutions/mike_tolmachev/7/: _msvc_gen_2010_64.bat  _msvc_gen_2012_64 .bat
solutions/peter_moroz/minute-market-data-project/: CMakeLists.txt  _msvc_gen_2005_64.bat
solutions/serg_brych/7/tasks/: CMakeLists.txt  _msvc_gen_2005_64.bat  _msvc_gen_2012.bat  _msvc_gen_2012_64.bat
solutions/serg_brych/7/tasks/sources/data_receiver/: CMakeLists.txt  main.cpp
solutions/serg_brych/7/tasks/sources/minute_calculator/: CMakeLists.txt  minute_calculator_accumulator.cpp  minute_calculator_accumulator.h
solutions/serg_brych/7/tasks/tests/minute_calculator_tests/: CMakeLists.txt  minute_calculator_accumulator_tests.cpp  test_registrator.cpp  test_registrator.h
solutions/serg_brych/7/tasks/tests/minute_market_data_tests/: CMakeLists.txt  minute_market_data_tests.cpp  test_registrator.cpp  test_registrator.h
solutions/stas_brutchikov/trade_processor_project/: _msvc_gen_2010_64.bat
solutions/stas_brutchikov/trade_processor_project/_cmake_scripts/: utils.cmake
(+158 files in other folders)
